# glauss

./: .gitignore  .travis.yml  LICENSE  Makefile.am  Makefile.in  README.md  bootstrap.py  configure  configure.ac  glauss_run.sh  index.html  makefile  objects.pos  params.json  physengine  physengine.sh  posdata.in  simconf.conf  simconf.ini  simconf.lua  wscript
.deps/: elements.Po  glfun.Po  molreader.Po  msg_phys.Po  parser.Po  physengine.Po  physics.Po  toxyz.Po
DOCS/: glauss.rst  physengine.rst
DOCS/examples/: fluid.lua  galaxy.lua  lua_threading.lua  metropolis.lua
DOCS/man/: physengine.rst
TOOLS/: file2string.py  png2c.py  vector.lua
client/: client.c
graph/: graph.c  graph.h  graph_fonts.c  graph_fonts.h  graph_objects.c  graph_objects.h  graph_sdl.c  graph_sdl.h  graph_thread.c  graph_thread.h
input/: .directory  graph_input.c  graph_input.h  in_file.c  in_file.h  input_thread.c  input_thread.h  parser.c  parser.h  sighandle.c  sighandle.h
main/: main.c  msg_phys.c  msg_phys.h  options.h  out_xyz.c  out_xyz.h  output.c  output.h
mpcomms/: mpcomms.c  mpcomms.h
physics/: physics.c  physics.h  physics_aux.c  physics_aux.h  physics_barnes_hut.c  physics_barnes_hut.h  physics_ctrl.c  physics_ctrl.h  physics_lua_threading.c  physics_lua_threading.h  physics_n_body.c  physics_n_body.h  physics_null.c  physics_null.h
resources/: elements.conf  elements.lua  helpstring.txt  helpstring_client.txt  helpstring_server.txt
resources/molecules/: h2o.xyz  nanotube.xyz
resources/shaders/: object.frag  object.vert  object_fs.glsl  object_vs.glsl  text_fs.glsl  text_vs.glsl
server/: server.c  server.h  server_io.c  server_io.h
shaders/: object.frag  object.vert  shader.frag  shader.vert
shared/: msg_phys.c  msg_phys.h  options.h  output.c  output.h
src/: Makefile.am  Makefile.in  config.h.in  elements.c  elements.h  glfun.c  glfun.h  graph.c  graph.h  graph_fonts.c  graph_fonts.h  graph_objects.c  graph_objects.h  graph_sdl.c  graph_sdl.h  in_file.c  in_file.h  in_molecule.c  in_molecule.h  main.c  main.c.save  molreader.c  molreader.h  msg_phys.c  msg_phys.h  options.h  out_xyz.c  out_xyz.h  parser.c  parser.h  phys_misc.c  physengine.c  physics.c  physics.h  physics_aux.c  physics_aux.h  physics_barnes_hut.c  physics_barnes_hut.h  physics_ctrl.c  physics_ctrl.h  (+8 more)
src/resources/: elements.h
src/shaders/: object_fs.h  object_vs.h  text_fs.h  text_vs.h
