AUTOMAKE_OPTIONS = foreign
EXTRA_DIST = autogen.sh posdata.in simconf.ini physengine.sh\
		 resources/elements.conf resources/shaders/object_fs.glsl resources/shaders/object_vs.glsl resources/shaders/text_fs.glsl resources/shaders/text_vs.glsl\
		 resources/fonts/DejaVuSansMono.ttf resources/fonts/LICENSE\
		 resources/molecules/1HBG.pdb resources/molecules/1SOP.pdb resources/molecules/1UAO.pdb resources/molecules/benzene.xyz resources/molecules/h2o.xyz resources/molecules/nanotube.xyz
SUBDIRS = src
