bin_PROGRAMS = physengine
physengine_SOURCES = physengine.c options.h config.h\
			graph.h graph.c\
			graph_objects.h graph_objects.c\
			graph_fonts.h graph_fonts.c\
			molreader.h molreader.c\
			msg_phys.h msg_phys.c\
			parser.h parser.c\
			toxyz.h toxyz.c\
			physics.h physics.c\
			physics_aux.h physics_aux.c\
			physics_n_body.h physics_n_body.c\
			physics_barnes_hut.h physics_barnes_hut.c
