bin_PROGRAMS = physengine
physengine_SOURCES = physengine.c options.h config.h\
			graph.h graph.c\
			graph_objects.h graph_objects.c\
			shaders/object_vs.h shaders/object_fs.h\
			graph_fonts.h graph_fonts.c\
			shaders/text_vs.h shaders/text_fs.h\
			in_molecule.h in_molecule.c\
			out_xyz.h out_xyz.c\
			msg_phys.h msg_phys.c\
			parser.h parser.c\
			physics.h physics.c\
			physics_aux.h physics_aux.c\
			resources/elements.h\
			physics_n_body.h physics_n_body.c\
			physics_barnes_hut.h physics_barnes_hut.c
